--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         </div>
         <div class="two2">
             <h1>Fastest VPS</h1>
-            <h1>Domain</h1>
+            <h1 class="web">Domain</h1>
             <h1>Website Builder</h1>
         </div>
         <div class="two22">
